--- a/settings.json
+++ b/settings.json
@@ -552,4 +552,8 @@
         "terminalEditor": false
     },
     "editor.definitionLinkOpensInPeek": true,
+    "highlightLine.borderStyle": "dashed",
+    "highlightLine.borderColor": "#00f17c",
+    // "highlightLine.borderColor": "#65eab9",
+    // "highlightLine.borderWidth": "1",
 }
